// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinksView should render empty view 1`] = `
"<Grid padded={true}>
  <GridRow>
    <GridColumn>
      <Header as=\\"h2\\" dividing={true}>
        Links
      </Header>
    </GridColumn>
  </GridRow>
  <GridRow>
    <GridColumn>
      <Connect(Component) />
    </GridColumn>
  </GridRow>
  <GridRow>
    <GridColumn>
      <Table singleLine={true} selectable={true} as=\\"table\\">
        <TableHeader as=\\"thead\\">
          <TableRow as=\\"tr\\" cellAs=\\"td\\">
            <TableHeaderCell as=\\"th\\">
              Address
            </TableHeaderCell>
            <TableHeaderCell as=\\"th\\">
              Title
            </TableHeaderCell>
            <TableHeaderCell as=\\"th\\">
              Types
            </TableHeaderCell>
            <TableHeaderCell as=\\"th\\">
              Actions
            </TableHeaderCell>
          </TableRow>
        </TableHeader>
        <TableBody as=\\"tbody\\" />
      </Table>
    </GridColumn>
  </GridRow>
</Grid>"
`;

exports[`LinksView should render with links 1`] = `
"<Grid padded={true}>
  <GridRow>
    <GridColumn>
      <Header as=\\"h2\\" dividing={true}>
        Links
      </Header>
    </GridColumn>
  </GridRow>
  <GridRow>
    <GridColumn>
      <Connect(Component) />
    </GridColumn>
  </GridRow>
  <GridRow>
    <GridColumn>
      <Table singleLine={true} selectable={true} as=\\"table\\">
        <TableHeader as=\\"thead\\">
          <TableRow as=\\"tr\\" cellAs=\\"td\\">
            <TableHeaderCell as=\\"th\\">
              Address
            </TableHeaderCell>
            <TableHeaderCell as=\\"th\\">
              Title
            </TableHeaderCell>
            <TableHeaderCell as=\\"th\\">
              Types
            </TableHeaderCell>
            <TableHeaderCell as=\\"th\\">
              Actions
            </TableHeaderCell>
          </TableRow>
        </TableHeader>
        <TableBody as=\\"tbody\\">
          <Connect(Component) types={{...}} link={{...}} />
          <Connect(Component) types={{...}} link={{...}} />
        </TableBody>
      </Table>
    </GridColumn>
  </GridRow>
</Grid>"
`;
